# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  comparison_tree.py  constants.py  generate_diff.py  parser.py  parsing_functions.py
gendiff/formatters/: form_selector.py  stylish_formatter.py
gendiff/functions/: comparator.py  comparison_tree.py  form_selector.py  functions.py  generate_diff.py  json_formatter.py  parser.py  plain_formatter.py  stylish_formatter.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: expected_json.txt  expected_nested_json.txt
